crates/cairo-lang-parser/src/parser_test_data/diagnostics/let_else
//! > Test let-else

//! > test_runner_name
get_diagnostics

//! > cairo_code
fn f() {
    { let Some(x) = 5 }
    { let Some(x) = 5 else }
    { let Some(x) = 5 else { } }
    { let Some(x) = 5 else 0; }
}

//! > expected_diagnostics
error[E1001]: Missing token ';'.
 --> dummy_file.cairo:2:22
    { let Some(x) = 5 }
                     ^

error[E1001]: Missing token '{'.
 --> dummy_file.cairo:3:27
    { let Some(x) = 5 else }
                          ^

error[E1001]: Missing token ';'.
 --> dummy_file.cairo:3:27
    { let Some(x) = 5 else }
                          ^

error[E1001]: Missing token ';'.
 --> dummy_file.cairo:4:31
    { let Some(x) = 5 else { } }
                              ^

error[E1000]: Skipped tokens. Expected: '{'.
 --> dummy_file.cairo:5:28
    { let Some(x) = 5 else 0; }
                           ^^

error[E1001]: Missing token '{'.
 --> dummy_file.cairo:5:30
    { let Some(x) = 5 else 0; }
                             ^

error[E1001]: Missing token ';'.
 --> dummy_file.cairo:5:30
    { let Some(x) = 5 else 0; }
                             ^
